using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings
{
    public static string AttackCoolDown = "AttackCoolDown";
    public static string HasTarget = "HasTarget";
    public static string CanMove = "CanMove";


    // T
    public static string IsOnCeiling = "IsOnCeiling";

    public static string LockVelocity = "LockVelocity";
    public static string IsAlive = "IsAlive";

    public static string RangedAttack = "RangedAttack";
}
